# lil-sparkies

./: .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  a.out  build.rs  sdkconfig.defaults
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
scripts/: build.sh  flash.sh  run-wokwi.sh
src/: main.rs
